some datatable fixes Google api for pictures Dropdown calls sepration Dropdown UI Fixes Placeholder fixes

--- a/PMS-PropertyHapa.Owner/Views/Landlord/Index.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Landlord/Index.cshtml
@@ -194,7 +194,7 @@
         function fetchOwners() {
             console.log('Fetching assets...'); // Debugging line
             $.ajax({
-                url: '/Landlord/GetLandlord', // Adjusted for a hypothetical correct URL
+                url: '/Landlord/GetLandlordDll', // Adjusted for a hypothetical correct URL
                 type: 'GET',
                 dataType: 'json',
                 success: function (data, textStatus, jqXHR) {
