--- a/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
@@ -263,7 +263,7 @@
         });
 
         $.ajax({
-            url: '@Url.Action("GetVendors", "Vendor")',
+            url: '@Url.Action("GetVendorsDll", "Vendor")',
             type: 'GET',
             dataType: 'json',
             success: function (data) {
