--- a/PMS-PropertyHapa.Staff/Views/Budget/Create.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Budget/Create.cshtml
@@ -101,7 +101,7 @@
                                             </div>
                                             <div class="col-md-4" style="padding-left: 5px; padding-right: 5px;">
                                                 <label class="mb-1">Property</label>
-                                    <select id="property" name="propertyId" class="form-control dropdownheight" required>
+                                    <select id="property" name="propertyId" class="form-control select2 dropdownheight" required>
                                                 </select>
                                             </div>
                                         </div>
