--- a/PMS-PropertyHapa.Staff/Views/Documents/SearchDocuments.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Documents/SearchDocuments.cshtml
@@ -71,7 +71,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="documentFile" class="form-label">Document Upload *</label>
-                        <input type="file" class="form-control" id="documentFile" name="DocumentFile" >
+                        <input type="file" class="form-control" id="documentFile" name="DocumentFile" accept=".pdf,.xls,.xlsx,.doc,.docx">
                         <img id="documentUpload" src="" alt="Document Upload" style="max-width: 100%;" class="d-none">
                     </div>
                     <div class="modal-footer">
