--- a/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
@@ -981,8 +981,8 @@
                                     <h2>Property </h2>
                                     <div class="mb-3">
                                         <label for="applicantProperty" class="form-label ">Property</label>
-                                        <select class="form-control" id="applicantProperty" required>
-                                            <option selected disabled value="">Please Select</option>
+                                        <select class="form-control select2" id="applicantProperty" required>
+                                           @* <option selected disabled value="">Please Select</option> *@
                                         </select>
                                     </div>
                                     <div class="mb-3">
@@ -1229,9 +1229,9 @@
 
     function populateUnits(propertyId, selectedUnits) {
         $.ajax({
-            url: '/Lease/ByProperty',
+            url: '/Lease/GetUnitsDll',
             method: 'GET',
-            data: { propertyId: propertyId },
+            data: { AssetIds: propertyId },
             success: function (units) {
                 var $applicantUnits = $('#applicantUnits');
                 $applicantUnits.empty();
