--- a/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
@@ -622,7 +622,7 @@
 
         // Fetch Tenants
         $.ajax({
-            url: '@Url.Action("GetTenants", "Communication")',
+            url: '@Url.Action("GetTenantsDll", "Communication")',
             type: 'GET',
             dataType: 'json',
             success: function (data) {
